--- a/public/index.html
+++ b/public/index.html
@@ -41,3 +41,7 @@
     -->
   </body>
 </html>
+<script src="https://cdn.bootcdn.net/ajax/libs/vConsole/3.7.0/vconsole.min.js"></script>
+<script>
+  var vConsole=new VConsole();
+</script>
